force-app/main/default/objects/PatientIntake__c/PatientIntake__c.object-meta.xml
<CustomObject>
    <label>Patient Intake</label>
    <pluralLabel>Patient Intakes</pluralLabel>
    <nameField>
        <label>Patient Intake Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>