force-app/main/default/objects/PatientIntake__c/fields/BloodPressure__c.field-meta.xml
<CustomField>
    <fullName>BloodPressure__c</fullName>
    <label>Blood Pressure</label>
    <type>Text</type>
    <length>20</length>
</CustomField>