force-app/main/default/objects/PatientIntake__c/fields/ComplaintDetails__c.field-meta.xml
<CustomField>
    <fullName>ComplaintDetails__c</fullName>
    <label>Complaint Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>


    