force-app/main/default/objects/PatientIntake__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chest pain</fullName>
            </value>
            <value>
                <fullName>Difficulty breathing</fullName>
            </value>
            <value>
                <fullName>Abdominal pain</fullName>
            </value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>