force-app/main/default/objects/PatientIntake__c/fields/HeartRate__c.field-meta.xml
<CustomField>
    <fullName>HeartRate__c</fullName>
    <label>Heart Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>