force-app/main/default/objects/PatientIntake__c/fields/IntakeTimestamp__c.field-meta.xml
<CustomField>
    <fullName>IntakeTimestamp__c</fullName>
    <label>Intake Timestamp</label>
    <type>DateTime</type>
</CustomField>