force-app/main/default/objects/PatientIntake__c/fields/MedicalHistory__c.field-meta.xml
<CustomField>
    <fullName>MedicalHistory__c</fullName>
    <label>Medical History</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>