force-app/main/default/objects/PatientIntake__c/fields/OxygenSaturation__c.field-meta.xml
<CustomField>
    <fullName>OxygenSaturation__c</fullName>
    <label>Oxygen Saturation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>