force-app/main/default/objects/PatientIntake__c/fields/RespiratoryRate__c.field-meta.xml
<CustomField>
    <fullName>RespiratoryRate__c</fullName>
    <label>Respiratory Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>